# rml

./: .gitignore  README.md  a.out  dune-project  roadmap.md
examples/: example.mlir  optimized.mlir
lib/: ast.ml  cgen.ml  codegen.ml  compile.ml  dune  ir.ml  irgen.ml  jsgen.ml  lexer.mll  mlirgen.ml  parser.mlx  parser.mly  sema.ml  util.ml
test/expected/: foo.mlir  sum.mlir  sumdoc.mlir
test/in/: foo.c  sum.c  sum.h  sum.js  sum.mlir  sum.rml  sum.rs
